# pastry

./: .gitignore  CMakeLists.txt  README.md  gl.hpp  mingw64.toolchain.txt  pastry.sublime-project
doc/: shading.nb
examples/: CMakeLists.txt  crowd.cpp  deferred.cpp  font.cpp  gravity.cpp  hello.cpp  hello_sdl.cpp  input.cpp  kitten.cpp  mesh.cpp  mosaik.cpp  particles.cpp  pong.cpp  post.cpp  postfx.cpp  quad.cpp  sprites.cpp  text.cpp  texture.cpp
examples/assets/: particles.frag  particles.geom  particles.vert  post.frag  post.geom  post.vert  readme.txt  skybox.frag  skybox.vert  stormydays_large.txt  suzanne.blend
examples/assets/deferred/: deferred.frag  deferred.vert  envlight.frag  pointlight.frag  render.frag  render.vert
include/pastry/: gl.hpp  obj.hpp  pastry.hpp  pastry_gl.hpp  sprites.hpp  std.hpp
include/pastry/deferred/: Camera.hpp  Component.hpp  DeferredRenderer.hpp  GBuffer.hpp  GameObject.hpp  Geometry.hpp  Light.hpp  Script.hpp  SkyBox.hpp
modules/core/: CMakeLists.txt
modules/core/include/pastry/: obj.hpp  pastry.hpp  std.hpp
modules/core/src/: obj.cpp  pastry.cpp  primitives.cpp  sprites.cpp  text.cpp
modules/deferred/: CMakeLists.txt
modules/deferred/include/pastry/deferred/: DeferredRenderer.hpp  Forward.hpp  Geometry.hpp  Scene.hpp  Script.hpp  Tools.hpp
modules/deferred/src/: GameObject.cpp
modules/postfx/: CMakeLists.txt  postfx.cpp
modules/postfx/include/pastry/: postfx.hpp
modules/sprites/: CMakeLists.txt  sprites.cpp
modules/sprites/include/pastry/: sprites.hpp
src/: CMakeLists.txt  engine.cpp  engine.hpp  obj.cpp  pastry.cpp  postfx.cpp  sprites.cpp  text.cpp
src/deferred/: Camera.cpp  DeferredRenderer.cpp  GBuffer.cpp  GameObject.cpp  Geometry.cpp  Light.cpp  Scene.cpp  SkyBox.cpp
tools/: publish.sh
