CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set(EIGEN3_INCLUDE_DIR "/usr/include/eigen3" CACHE STRING "Eigen3 include directory")

INCLUDE_DIRECTORIES(include)

ADD_DEFINITIONS(-std=c++0x)

# cross-compile
ADD_DEFINITIONS(-m64)

INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES(src)

PROJECT(pastry)
ADD_SUBDIRECTORY(examples)
ADD_SUBDIRECTORY(src)
